:in-range & :out-of-range CSS pseudo-classes shouldn't match inputs without range limitations https://bugs.webkit.org/show_bug.cgi?id=156558

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-06-16
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/selectors/pseudo-classes/inrange-outofrange-expected.txt:
One of the previous match was erroneous.
Our results are still very far from being correct. There are several
bugs affecting our range validation.

Source/WebCore:

The pseudo selectors :in-range and :out-of-range should only
apply if:
-minimum/maximum are defined for the input type
-the input value is/is-not suffering from underflow/overflow.

Only certain types have a valid minimum and maximum:
-number
-range
-date
-month
-week
-time
-datetime-local

Of those, only one has a default minimum and maximum: range.
For all the others, the minimum or maximum is only defined
if the min/max attribute is defined and valid.

This patch addresses these constraints for number and range.
The date types range validation is severely broken and is
left untouched. It really needs a clean rewrite.

Tests: fast/css/pseudo-in-range-basics.html
       fast/css/pseudo-in-range-out-of-range-trivial.html
       fast/css/pseudo-out-of-range-basics.html

* html/DateInputType.cpp:
(WebCore::DateInputType::createStepRange):
* html/DateTimeInputType.cpp:
(WebCore::DateTimeInputType::createStepRange):
* html/DateTimeLocalInputType.cpp:
(WebCore::DateTimeLocalInputType::createStepRange):
* html/InputType.cpp:
(WebCore::InputType::isInRange):
(WebCore::InputType::isOutOfRange):
Notice the isEmpty() shortcut.
A value can only overflow/underflow if it is not empty.

* html/MonthInputType.cpp:
(WebCore::MonthInputType::createStepRange):
* html/NumberInputType.cpp:
(WebCore::NumberInputType::createStepRange):
* html/RangeInputType.cpp:
(WebCore::RangeInputType::createStepRange):
* html/StepRange.cpp:
(WebCore::StepRange::StepRange):
* html/StepRange.h:
(WebCore::StepRange::hasRangeLimitations):
* html/WeekInputType.cpp:
(WebCore::WeekInputType::createStepRange):

LayoutTests:

* fast/css/pseudo-in-range-basics-expected.html: Added.
* fast/css/pseudo-in-range-basics.html: Added.
* fast/css/pseudo-in-range-out-of-range-trivial-expected.html: Added.
* fast/css/pseudo-in-range-out-of-range-trivial.html: Added.
* fast/css/pseudo-out-of-range-basics-expected.html: Added.
* fast/css/pseudo-out-of-range-basics.html: Added.

Canonical link: https://commits.webkit.org/176921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202143 268f45cc-cd09-0410-ab3c-d52691b4dbfc