Source/WebCore/html/NumberInputType.cpp
@@ -156,10 +156,23 @@ StepRange NumberInputType::createStepRange(AnyStepHandling anyStepHandling) cons
     const Decimal stepBase = parseToDecimalForNumberType(element().fastGetAttribute(minAttr), numberDefaultStepBase);
     // FIXME: We should use numeric_limits<double>::max for number input type.
     const Decimal floatMax = Decimal::fromDouble(std::numeric_limits<float>::max());
-    const Decimal minimum = parseToNumber(element().fastGetAttribute(minAttr), -floatMax);
-    const Decimal maximum = parseToNumber(element().fastGetAttribute(maxAttr), floatMax);
-    const Decimal step = StepRange::parseStep(anyStepHandling, stepDescription, element().fastGetAttribute(stepAttr));
-    return StepRange(stepBase, minimum, maximum, step, stepDescription);
+    const Element& element = this->element();
+
+    RangeLimitations rangeLimitations = RangeLimitations::Invalid;
+    auto extractBound = [&] (const QualifiedName& attributeName, const Decimal& defaultValue) -> Decimal {
+        const AtomicString& attributeValue = element.fastGetAttribute(attributeName);
+        Decimal valueFromAttribute = parseToNumberOrNaN(attributeValue);
+        if (valueFromAttribute.isFinite()) {
+            rangeLimitations = RangeLimitations::Valid;
+            return valueFromAttribute;
+        }
+        return defaultValue;
+    };
+    Decimal minimum = extractBound(minAttr, -floatMax);
+    Decimal maximum = extractBound(maxAttr, floatMax);
+
+    const Decimal step = StepRange::parseStep(anyStepHandling, stepDescription, element.fastGetAttribute(stepAttr));
+    return StepRange(stepBase, rangeLimitations, minimum, maximum, step, stepDescription);
 }
 
 bool NumberInputType::sizeShouldIncludeDecoration(int defaultSize, int& preferredSize) const
